--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <nav>
                     <ul>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="index.html">About</a></li>
                         <li><a href="orgexp.html">Organization Experience</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="contact.html">Contact</a></li>
